[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jsdoc"
version = "1.0.3"
description = "A Python package for parsing JSDoc comment blocks into structured BaseModel objects"
authors = [{name = "JSDoc Authors", email = "authors@jsdoc.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Markup",
]
keywords = ["jsdoc", "documentation", "parser", "javascript"]
dependencies = [
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "isort",
    "flake8",
]

[project.urls]
Homepage = "https://github.com/yunfanye/jsdoc"
Documentation = "https://github.com/yunfanye/jsdoc"
Repository = "https://github.com/yunfanye/jsdoc.git"
"Bug Tracker" = "https://github.com/yunfanye/jsdoc/issues"

[tool.setuptools]
packages = ["jsdoc"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"